--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
   "homepage": "https://github.com/brunojkurt/my-lab#readme",
   "dependencies": {
     "antd": "^4.8.5",
+    "moment": "^2.29.1",
     "next": "^10.0.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-trello": "^2.2.8"
   }
 }
