--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "moment": "^2.29.1",
     "next": "^10.0.3",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "react-trello": "^2.2.8"
+    "react-beautiful-dnd": "^13.0.0",
+    "react-dom": "^17.0.1"
   }
 }
