--- a/package.json
+++ b/package.json
@@ -20,10 +20,12 @@
   "homepage": "https://github.com/brunojkurt/my-lab#readme",
   "dependencies": {
     "antd": "^4.8.5",
+    "luxon": "^1.27.0",
     "moment": "^2.29.1",
     "next": "^10.0.3",
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "styled-components": "^5.3.0"
   }
 }
