--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "^17.0.1",
     "react-beautiful-dnd": "^13.0.0",
     "react-dom": "^17.0.1",
+    "react-icons": "^4.2.0",
     "styled-components": "^5.3.0"
   }
 }
